# test-poetry-python-references

./: README.md
chain_of_local_python_packages_referencing_each_other/: README.md
chain_of_local_python_packages_referencing_each_other/dep1/: pyproject.toml
chain_of_local_python_packages_referencing_each_other/dep2/: pyproject.toml
chain_of_local_python_packages_referencing_each_other/dep2/dep2/: __init__.py
chain_of_local_python_packages_referencing_each_other/poetrytest/: pyproject.toml
chain_of_local_python_packages_referencing_each_other/poetrytest/poetrytest/: main.py
debug_poetry_package_script_with_vscode/: README.md  pyproject.toml
debug_poetry_package_script_with_vscode/.vscodedebug/: debug.py
debug_poetry_package_script_with_vscode/src/debug_script_with_vscode/: relative_import.py  script.py
dep1/: pyproject.toml
dep2/: pyproject.toml
install_python_script_globally_with_pipx/: README.md  pyproject.toml
install_python_script_globally_with_pipx/src/simplepyscriptpackage/: script.py
poetry_install_references_into_local_venv/: README.md  pyproject.toml
poetry_install_references_into_local_venv/src/localvenvtest/: __main__.py
poetrytest/: pyproject.toml
reference_chain/dep1/: pyproject.toml
reference_chain/dep1/dep1/: __init__.py
reference_chain/dep2/: pyproject.toml
reference_chain/poetrytest/: pyproject.toml
reference_chain/poetrytest/poetrytest/: main.py
