[tool.poetry]
name = "poetrytest"
version = "0.1.0"
description = ""
authors = ["Patrick Richter <gratach@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dep1 = {path = "../dep1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meinscri = "poetrytest.main:start"
