[project]
name = "poetrytest"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Richter", email = "patrick-richter@posteo.de"}
]

[tool.poetry.dependencies]
python = "^3.11"
dep1 = {path = "../dep1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meinscri = "poetrytest.main:start"
